add distributed key generate